--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -89,7 +89,7 @@ a
 .scroll-top
   position: fixed
   bottom: 2rem
-  right: 0.3rem
+  right: 1.5rem
   width: 39px
   height: 39px
   cursor: pointer
